<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_subscribe"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/channel" />

    <item
        android:id="@+id/navigation_AI"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_AI" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/title_recipe" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/mypage" />

</menu>