<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bcu.foodtable.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subscribe"
        android:name="com.bcu.foodtable.ui.subscribeNavMenu.SubscribeFragment"
        android:label="@string/channel"
        tools:layout="@layout/fragment_subscribe" />
    <fragment
        android:id="@+id/navigation_AI"
        android:name="com.bcu.foodtable.ui.aiServiceNavMenu.AIFragment"
        android:label="@string/title_AI"
        tools:layout="@layout/fragment_ai" />
    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.bcu.foodtable.ui.myRecipeStorage.RecipeStorageFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe_storage" />
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.bcu.foodtable.ui.myPage.MyPage"
        android:label="@string/mypage"
        tools:layout="@layout/fragment_mypage" />
</navigation>