<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="70dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/dish_icon"
                app:tint="#C62828" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/dimibang"
                android:paddingBottom="15dp"
                android:text="@string/app_name"
                android:textColor="#C62828"
                android:textSize="80sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/warningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#C62828"
                android:textSize="14sp"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/round_shape"
                    android:backgroundTint="#66979797"
                    android:hint="@string/login_id"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingStart="40dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwdInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/round_shape"
                    android:backgroundTint="#66979797"
                    android:hint="@string/login_password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:paddingStart="40dp"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/round_login_button"
                android:fontFamily="sans-serif"
                android:text="@string/login_button"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/loginSignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_signup_button"
                android:fontFamily="sans-serif"
                android:text="@string/signup"
                android:textColor="#C62828"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#C62828"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>