<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AI.AiRecommendationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/Sending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D32F2F"
            android:orientation="horizontal"
            android:padding="4dp"
            android:translationZ="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/the_jamsil"
                android:text="@string/ai_recipe"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/AIRecommendSalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/the_jamsil_bold"
                android:text="200 소금"
                android:textAlignment="viewEnd"
                android:textColor="#FFF176"
                android:textSize="20sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/AIResponseRecommendationCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#D32F2F"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/the_jamsil_bold"
                            android:padding="6dp"
                            android:text="@string/recommend_AI_output"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/AiResponseResult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:fontFamily="@font/the_jamsil"
                            android:padding="6dp"
                            android:text="TextView" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/AiResponseRecommendationReasonCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#D32F2F"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/the_jamsil_bold"
                            android:padding="6dp"
                            android:text="@string/recommend_AI_reason"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/AiResponseReason"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#FFFFFF"
                            android:fontFamily="@font/the_jamsil"
                            android:padding="6dp"
                            android:text="TextView" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Sending"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="#D32F2F"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round_search_shape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userAIPromptInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/the_jamsil"
                android:hint="@string/recommend_sample"
                android:textSize="12sp"
                android:translationY="-5dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitAiSendButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="6"
            android:background="@drawable/baseline_send_24"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/the_jamsil" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/warningCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:translationZ="3dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/Sending"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFA000"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/warningTextCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_cost"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/BackgroundText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="6dp"
        android:fontFamily="@font/the_jamsil_bold"
        android:gravity="center"
        android:text="@string/recommend_sample"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>